# Linux-System-Resource-Monitor

./: Cargo.toml  DockerFIle  README.md  Repository structure  alerts.rs  anomaly.rs  build.rs  ci.yml  client.rs  docker-compose.yml  main.rs  metrics.rs  run_client.sh  run_server.sh  server.rs  setup.sh  system.proto
