[package]
name = "lsrm"
version = "0.1.0"
edition = "2021"
description = "Linux System Resource Monitor with gRPC, alerts, anomaly detection"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
sysinfo = { version = "0.30", features = ["multithread"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-stream = "0.1"
futures = "0.3"
once_cell = "1"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
